# integrator

./: CMakeLists.txt  README.md  integratorConfig.cmake
.github/workflows/: clang-format-check.yml  full-linux-build.yml  minimal-linux-build.yml
include/: dop853.hpp  integration_parameters.hpp
src/: CMakeLists.txt  dp86co.cpp  hinit853.cpp  integration_parameters_from_config.cpp
src/extra/: al3.cpp
test/: CMakeLists.txt  exponential_growth.cpp  harmonic_oscilator.cpp  linear_system_d2.cpp
